# danfoss-ally-scheduler

./: README.md  pyproject.toml
.github/workflows/: codeql.yml
danfoss_ally_scheduler/: __main__.py  main.py  mqtt_config.py  thermostat_manager.py
tests/: test_thermostat_manager.py
